--- a/hello-world.html
+++ b/hello-world.html
@@ -15,7 +15,7 @@
 <p>We'll start with languages that the Acedu staff could offer without using Google. </p>
 
 <ul>
-  <li> English: Hello, world! </li>
+  <li> English: Hello, world hi! </li>
   <li> Yoruba: E n le o, agbaye! </li>
   <li> Japanese: Konnichiwa, sekai! </li>
   <li> French: Bonjour, monde! </li>
